<resources>
    <string name="app_name">LINK</string>
    <string name="agora_app_id" translatable="false"></string>
    <string name="agora_access_token" translatable="false"></string>
    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Banner_ID" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="int_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="nativ_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="phoneNum_btn" translatable="false">Phone</string>
    <string name="email_btn" translatable="false">Email</string>
    <string name="phoneNum_txt" translatable="false">Enter your phone number</string>
    <string name="verify_txt" translatable="false">Verify + </string>
    <string name="mapbox_access_token" translatable="false">MAPBOX_ACCESS_TOKEN</string>
    <string name="map_style" translatable="false">MAP_STYLE</string>
    <string name="map_username" translatable="false">MAPBOX_USERNAME</string>
    <string name="policy_btn" translatable="false">AGREE AND CONTINUE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="phone_hint">Phone number</string>
    <string name="invalid_phone">Invalid phone numebr</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="code">Code</string>
    <string name="check_conn">Check Connection</string>
    <string name="cannt_verify">Can\'t verify your number</string>
    <string name="invalid_code">Invalid code entered…</string>
    <string name="fix_it">Somthing is wrong, we will fix it soon…</string>
    <string name="resend">You can get another code after 1 minute</string>
    <string name="enter_code">Enter the code</string>
    <string name="friends">Friends</string>
    <string name="you_added">You added to</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="edit">Edit Profile</string>
    <string name="check_int">Please check your connection</string>
    <string name="cannot_user">Can\'t reach this user</string>
    <string name="image_update">Image updated</string>
    <string name="image_fail">Failed to upload image</string>
    <string name="statue">Statue</string>
    <string name="social_txt" translatable="false">De La Salle University, also known simply     as La Salle and abbreviated as DLSU, is  a private, Catholic research university run  by the De La Salle Brothers located in Taft  Avenue, Malate, Manila, Philippines.</string>
    <string name="name">Name</string>
    <string name="plz_name">Please write your name</string>
    <string name="error">Error occurred</string>
    <string name="signup_succ">Welcome :)</string>
    <string name="signin_succ">Welcome again :)</string>
    <string name="loading">Loading…</string>
    <string name="now">just now</string>
    <string name="minute">minute ago</string>
    <string name="min_ago"> minutes ago</string>
    <string name="hour">an hour ago</string>
    <string name="hours"> hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days"> days ago</string>
    <string name="m_e_s_s_a_g_e">M E S S A G E</string>
    <string name="voice_call">Voice Call</string>
    <string name="online_nw">Online Now</string>
    <string name="view_pro">View profile</string>
    <string name="prfl_updt">Profile Updated</string>
    <string name="photo_dlete">Photo deleted</string>
    <string name="contacts">Contacts</string>
    <string name="online">Online</string>
    <string name="search_on_name_and_phone">Search on Name and Phone</string>
    <string name="pleasW">Please Wait…</string>
    <string name="ending">Ending call…</string>
    <string name="hint_enter_a_message" />
    <string name="date_header_yesterday">Yesterday</string>
    <string name="Failed">Failed to Send the Message</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message Copied</string>
    <string name="date_header_today">Today</string>
    <string name="empty_mess">You can\'t send empty message</string>
    <string name="menu_gallery">Image</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_location">Location</string>
    <string name="SLC">Slide To Cancel</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="cannot_play">Can\'t play the voice note</string>
    <string name="cannot_open">Can\'t open the file</string>
    <string name="title_activity_map">Map</string>
    <string name="friendlocation">Friend\'s Location</string>
    <string name="map_location">Map Location</string>
    <string name="typing">Typing…</string>
    <string name="recording"> is recording audio…</string>
    <string name="downloadcomplete">Download Complete</string>
    <string name="downloadstart">Downloading…</string>
    <string name="copy">Copy</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="delete_for_all">Delete for all</string>
    <string name="mssg_cpd">Message Copied</string>
    <string name="mss_dlt">Message Deleted</string>
    <string name="notcontact">It seems that this number is not in your contacts </string>
    <string name="add_contact">Add Contact</string>
    <string name="block">  Block</string>
    <string name="unblock">Unblock</string>
    <string name="deletechat">Delete Chat</string>
    <string name="mute">  Unread</string>
    <string name="unmute">Unmute</string>
    <string name="chat_dee">Chat Deleted</string>
    <string name="call_dee">Call logs Deleted</string>
    <string name="contacts_alert">Please add the sim for better performance</string>
    <string name="contact">Contact</string>
    <string name="stories">Add a Story</string>
    <string name="favorite_messages">Starred Messages</string>
    <string name="muted">Muted</string>
    <string name="blocked">Blocked</string>
    <string name="setting">Setting</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="pleasew8">Please wait until the voice note upload</string>
    <string name="request_message" translatable="false">Hi I have invited you to the job
        Yazio app because your profile matches what I`m looking for.</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_setting">Setting</string>
    <string name="about">About</string>
    <string name="description">is an advanced chat app build on Google Firebase system and supports multi languages</string>
    <string name="ok">OK</string>
    <string name="privacy">Privacy and policy</string>
    <string name="per_delete_acc">Permanently account delete</string>
    <string name="acc_delete_hint">Are you sure you want to permanently delete your account? \n Alert : All data will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="choose_lang">Choose Language</string>
    <string name="choose_not">Choose Notification</string>
    <string name="restart">Please restart the app</string>
    <string name="restart_hint">Please Restart the app to fully active language change</string>
    <string name="wait">Please wait until data completely send</string>
    <string name="timeerror">Can\'t get server time </string>
    <string name="likeR">Reacted like to your message</string>
    <string name="funnyR">Reacted funny to your message</string>
    <string name="loveR">Reacted love to your message</string>
    <string name="sadR">Reacted sad to your message</string>
    <string name="angryR">Reacted angry to your message</string>
    <string-array name="lang">
        <item>Default</item>
        <item>العربية</item>
        <item>Deutch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Italiano</item>
        <item>Portuguese</item>
        <item>فارسی</item>
        <item>हिंदी</item>
        <item>한국어</item>
        <item>русский язык</item>

    </string-array>
    <string-array name="langCodes">
        <item>def</item>
        <item>ar</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
        <item>pt</item>
        <item>fa</item>
        <item>hi</item>
        <item>ko</item>
        <item>ru</item>
    </string-array>
    <string-array name="font">
        <item>Chapinero Blackletter</item>
        <item>Wake The Warrior</item>
        <item>Historea</item>
        <item>FunSized</item>
        <item>Thundergood</item>
        <item>Elmira</item>
        <item>Squizers Marker</item>
        <item>Default</item>
    </string-array>
    <string-array name="fontCodes">
        <item>ch</item>
        <item>wa</item>
        <item>hi</item>
        <item>fun</item>
        <item>th</item>
        <item>el</item>
        <item>squ</item>
        <item>def</item>
    </string-array>
    <string-array name="settingmain">
        <item>Chat Settings</item>
        <item>Call Settings</item>
        <item>Security Settings</item>
        <item>Notifications Settings</item>
        <item>Change Language</item>
        <item>Delete Account</item>
        <item>Privacy and policy</item>
        <item>About</item>
    </string-array>
    <string-array name="ringN">
        <item>Default</item>
        <item>Notification 1</item>
        <item>Notification 2</item>
        <item>Notification 3</item>
        <item>Notification 4</item>
    </string-array>
    <string name="defaultt">Default</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="led_color">LED color</string>
    <string name="retry">Retry</string>
    <string name="snap">Snap</string>
    <string name="add_to_admins">Add to admins</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="remove_user">Remove User</string>
    <string name="call_ringtone">Call Ringtone</string>
    <string name="clear_call_logs">Clear call logs</string>
    <string name="qr" translatable="false">QR</string>
    <string name="title_activity_archieve">Stories Archive</string>
</resources>