<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/stories"
            android:title="@string/stories" />
        <item
            android:id="@+id/archS"
            android:icon="@drawable/ic_arch"
            android:title="@string/title_activity_archieve" />
        <item
            android:id="@+id/nav_favM"
            android:icon="@drawable/ic_star"
            android:title="@string/favorite_messages" />
        <item
            android:id="@+id/nav_muted"
            android:icon="@drawable/mutedpeople"
            android:title="@string/muted" />
        <item
            android:id="@+id/nav_blocked"
            android:icon="@drawable/block_menu"
            android:title="@string/blocked" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_menu"
            android:title="@string/setting" />

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/qr"
                android:icon="@drawable/qr"
                android:title="@string/qr" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/signout_menu"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
