<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:id="@+id/dialogM"
        android:gravity="center_horizontal"
        android:background="@drawable/dialog_w"
        android:orientation="vertical" >

        <Button
            android:id="@+id/copy"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_g"
            android:textStyle="bold" />

        <Button
            android:id="@+id/retry"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_r"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_for_me"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_r"
            android:textStyle="bold" />
        <Button
            android:id="@+id/deleteall"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_r"
            android:textAllCaps="false"
            android:text="@string/delete_for_all"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
