<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:id="@+id/dialogM"
        android:gravity="center_horizontal"
        android:background="@drawable/dialog_w"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/selecticon"/>
        <Button
            android:id="@+id/mkadmin"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/add_to_admins"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_r"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rmvadmin"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_admin"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_r"
            android:textStyle="bold" />
        <Button
            android:id="@+id/deletuser"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_user"
            android:textColor="@color/colorPrimaryDark2awy"
            android:background="@drawable/round_wire_r"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
