<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".settingsitems.CallsSetting"
    tools:showIn="@layout/activity_calls_setting">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/ringL"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_notifications_b"
            android:id="@+id/ringI" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mainT"
                android:layout_gravity="center"
                android:text="@string/call_ringtone"
                android:gravity="center|start"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ringT"
                android:layout_gravity="center"
                android:text="@string/defaultt"
                android:gravity="center|start"
                android:layout_marginStart="5dp"
                android:textColor="@color/greystory"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/clear"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_delete_r"
            android:id="@+id/clearI" />
        <TextView
            android:id="@+id/clearT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/clear_call_logs"
            android:gravity="center|start"
            android:layout_marginStart="15dp"
            android:textColor="@color/red"
            android:textSize="18sp"
            />
    </LinearLayout>
</LinearLayout>