<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ar.codeslu.plax.settingsitems.NotifSetting"
    tools:showIn="@layout/activity_notif_setting">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/soundL"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_notifications_b"
            android:id="@+id/soundI" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/notification_sound"
                android:id="@+id/main1"
                android:gravity="center|start"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/soundT"
                android:layout_gravity="center"
                android:text="@string/defaultt"
                android:gravity="center|start"
                android:layout_marginStart="5dp"
                android:textColor="@color/greystory"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/ledL"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_color"
            android:id="@+id/ledI" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/led_color"
                android:id="@+id/main2"
                android:gravity="center|start"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>